# -agents-

./: .dockerignore  .env.example  .gitignore  DEMO_RUNBOOK.md  Dockerfile  README.md  TEST_REPORT.md  docker-compose.yml  final_eval_report.json  final_test.json  fix_result.json  fix_result2.json  long_10turn.json  mem_v3.json  memory_clean.json  memory_final.json  memory_fix_result.json  multi_turn_result.json  pyproject.toml  quick_result.json  real_user_sim.json  requirements.txt  sentiment_test_report.json  stm_result.json  stm_result2.json  test_results.json  test_results2.json  test_results3.json
.github/workflows/: ci.yml  golden-eval.yml  llm-tests.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/agents/: __init__.py  base_agent.py
app/api/: __init__.py  agent_routes.py  observability_routes.py
app/data/: __init__.py  kb_vector.py  kg_builder.py  kg_search.py  loader.py
app/evaluation/: __init__.py  golden_dataset.py  llm_judge.py  metrics.py
app/graph/: __init__.py  checkpoint.py  context_engine.py  dialogue_state.py  routing_logic.py  state_definition.py  (+2 more)
k8s/: deployment.yaml
prompts/: compression.yaml  evaluation.yaml  supervisor.yaml  versions.yaml  worker.yaml  worker_roles.yaml
scripts/: demo_security.py  e2e_memory_test.py  e2e_test.py  export_prompts.py  init_db.py  run_docker.sh  run_drift_check.py  run_eval_for_observability.py  run_eval_pipeline.py  run_local.sh  seed_golden.py
tests/: comprehensive_test.py  conftest.py  final_verification.py  golden_dataset.json  llm_workflow_test.py  test_checkpoint.py  test_evaluation.py  test_golden_eval.py  test_handoff.py  test_long_term_memory.py  test_observability.py  test_prompt_registry.py  test_security.py  test_supervisor.py  test_tools.py  workflow_test_results.json
(+54 files in other folders)
